Prevent overflow on crazy long song name (wu-tang my only one!)

--- a/src/components/track/track.css
+++ b/src/components/track/track.css
@@ -112,6 +112,8 @@
 
 .nameHero {
 	composes: name;
+	max-height: 5rem;
+	overflow: hidden;
 }
 
 .nameSmall {
